Fix content spacing

--- a/app/public/wp-content/themes/chasearmstrongblog/style.css
+++ b/app/public/wp-content/themes/chasearmstrongblog/style.css
@@ -386,7 +386,7 @@ p {
   width: 100%;
   min-height: 100vh;
   overflow-y: auto;
-  padding: 60px;
+  padding: 40px;
   background-color: #e6ebf3;
   box-sizing: border-box;
 }
@@ -401,6 +401,12 @@ p {
 @media (min-width: 0px) and (max-width: 768px) {
   .posts-container {
     grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+
+  #posts-page {
+    padding: 20px;
   }
 }
 
@@ -476,9 +482,9 @@ p {
 }
 
 .single-post-container {
-  padding-right: 60px;
-  padding-left: 60px;
-  padding-bottom: 60px;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-bottom: 40px;
 }
 
 @media (max-width: 768px) {
